fixed delete button on mobile added some styles added storing of historical data for building graphs

--- a/source/components/form/form.module.scss
+++ b/source/components/form/form.module.scss
@@ -20,6 +20,7 @@
     background-color: transparent;
     border: none;
     border-bottom: 1px solid white;
+    padding: 0;
     padding-bottom: 5px;
     color: white;
     text-transform: uppercase;
