--- a/source/scss/_mixins.scss
+++ b/source/scss/_mixins.scss
@@ -11,6 +11,12 @@
   padding: 10px 15px;
   box-shadow: 0 0 15px 0 rgba($color, 0.2);
   color: darken($dark-gray, 0.2);
+  transition: transform 0.15s $ease-out;
+  will-change: transform;
+
+  &:not(:disabled):hover {
+    transform: scale(0.95, 0.9);
+  }
 }
 
 @mixin font-size-base {
